<resources>
    <string name="app_name">LumberjackRewards</string>
    <string name="title_activity_bottom_nav_bar">bottom_nav_bar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_badges">Badges</string>
    <string name="title_settings">Settings</string>
    <string name="new_screen">New Screen</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="back">BACK</string>
    <string name="settings">Settings</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="settings_nameplate">Current Person</string>
    <string name="settings_phone_number">(123) &#8211; 456 &#8211; 8910</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="security_icon">Security Icon</string>
    <string name="security_privacy">Security &amp; Privacy</string>
    <string name="sp_description">SP More Info</string>
    <string name="text_size">Text Size</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQs</string>
    <string name="log_out">Log Out</string>
</resources>