<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_badges"
        android:name="com.example.lumberjackrewards.BadgesActivity"
        android:label="@string/title_badges"
        tools:layout="@layout/activity_badges" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lumberjackrewards.MainActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.lumberjackrewards.Settings"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_page" />
</navigation>