<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        android:orientation="vertical"
        tools:context=".Settings"
        >
        <!-- Top Navigation Bar -->
        <RelativeLayout
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="visible"
                app:icon="@drawable/back_btn" />

            <!-- android:src = "drawable/back_btn" -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/settings"
                android:layout_centerInParent = "true"
                android:textColor = "#FFFFFF"
                android:textStyle= "bold"
                android:textSize = "18sp"
                />
        </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--profile icon, add android:src after layout-->
            <ImageView
                android:layout_width="40dp"
                android:contentDescription="@string/profile_icon"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/settings_nameplate"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_phone_number"
                android:textColor="#CCFFFFFF"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/round_back_white10_20">

                <!--Dark Mode / Night Mode-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--night mode-->
                    <ImageView
                        android:contentDescription="@string/night_mode"
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/night_mode_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/nightModeIcon"
                        android:text="@string/night_mode"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch" />
                </RelativeLayout>

                <!--Notifications-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:contentDescription="@string/notification_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:src="@drawable/notifications_icon" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/notificationIcon"
                        android:text="@string/title_notifications"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/notificationsSwitch" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">
                <!-- Security-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/security_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:contentDescription="@string/security_icon"
                        android:src="@drawable/privacy_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/security_icon"
                        android:src="@drawable/privacy_icon"
                        android:text="@string/security_privacy"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:contentDescription="@string/sp_description"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon" />
                </RelativeLayout>

                <!-- Text Size-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/text_size_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/text_size"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/text_size_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/text_size_icon"
                        android:text="@string/text_size"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/text_size"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Send Us A Messages-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_private_account"
                        android:padding="12dp"
                        android:contentDescription="@string/contact_us"
                        android:src="@drawable/message_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/message_icon"
                        android:text="@string/contact_us"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon"
                        android:contentDescription="@string/settings"/>
                </RelativeLayout>

                <!-- About Us-->
                <!--
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/about_us_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/about_us_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/about_us_icon"
                        android:text="About Us"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon" />
                </RelativeLayout>
                !-->
                <!-- FAQs-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/backButton">

                    <ImageView
                        android:id="@+id/faq_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/faq_icon"
                        android:contentDescription="@string/profile_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/faq_icon"
                        android:text="@string/faq"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon"
                        android:contentDescription="@string/profile_icon"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">
                <!-- Log Out-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/log_out_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/log_out_icon"
                        android:contentDescription="@string/log_out"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/log_out_icon"
                        android:text="@string/log_out"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon"
                        android:contentDescription="@string/settings"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>